--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My First GitHub Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Free Tutoring - Payment</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        button {
+            background: #528FF0;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button:hover {
+            background: #3c6fd6;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This site is hosted using GitHub Pages!</p>
+    <h1>Free Tutoring - Support Us</h1>
+    <p>Pay ₹299 to get started</p>
+    <button id="payBtn">Pay ₹299</button>
+
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="razorpay.js"></script>
 </body>
 </html>
