--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Tutoring - Payment</title>
     <style>
-        body {
+        body {<form>
+    <script src="https://checkout.razorpay.com/v1/payment-button.js"
+            data-payment_button_id="pl_R4tEB0L06aPwr2" async>
+    </script>
+</form>
+
             font-family: Arial, sans-serif;
             background: #f4f4f4;
             text-align: center;
@@ -37,3 +42,4 @@
     <script src="razorpay.js"></script>
 </body>
 </html>
+
