--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
 <body>
 
     <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#tutors">Tutors</a></li>
+            <li><a href="#payment">Payment</a></li>
+        </ul>
+    </nav>
+
+    <!-- Header Section -->
     <header>
         <h1>Free Tutoring</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="#">Payment</a>
-        </nav>
+        <p>Quality Learning for Everyone</p>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h2>Quality Learning for Everyone</h2>
-        <p>Join our mission to provide free tutoring to students across the globe.</p>
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are committed to providing free tutoring to students worldwide, ensuring access to quality education for all.</p>
     </section>
 
     <!-- Tutors Section -->
-    <section class="tutors">
+    <section id="tutors">
         <h2>Find Your Perfect Tutor</h2>
         <p>Learn from the best tutors across various subjects</p>
-        <div class="tutor-list">
+
+        <div class="tutor-container">
             <div class="tutor-card">
                 <img src="tutor1.png" alt="Tutor 1">
                 <h3>Priya Sharma</h3>
@@ -49,19 +55,19 @@
     </section>
 
     <!-- Payment Section -->
-    <section class="payment">
+    <section id="payment" class="payment-section">
         <h2>Support Us</h2>
         <p>Pay ₹299 to help us keep tutoring free for everyone.</p>
         <form>
-            <script src="https://checkout.razorpay.com/v1/payment-button.js" 
-                    data-payment_button_id="pl_R4tEB0LO6aPwr2" async>
+            <script src="https://checkout.razorpay.com/v1/payment-button.js"
+                data-payment_button_id="pl_R4tEB0LO6aPwr2" async>
             </script>
         </form>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Free Tutoring. All Rights Reserved.</p>
+        &copy; 2025 Free Tutoring. All Rights Reserved.
     </footer>
 
 </body>
