--- a/login.html
+++ b/login.html
@@ -1,40 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - Free Tutoring</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .login-box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      width: 350px;
+      text-align: center;
+    }
+    h2 { color: #333; margin-bottom: 20px; }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover { background: #1e7e34; }
+    .link { margin-top: 15px; font-size: 14px; }
+    .link a { color: #28a745; text-decoration: none; }
+  </style>
 </head>
 <body>
-
-  <header>
-    <h1>Free Tutoring</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="login.html" class="active">Login</a>
-      <a href="register.html">Register</a>
-    </nav>
-  </header>
-
-  <section class="form-section">
+  <div class="login-box">
     <h2>Login</h2>
-    <form>
-      <label for="role">I am a:</label>
-      <select id="role" name="role">
-        <option value="student">Student</option>
-        <option value="tutor">Tutor</option>
-      </select>
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" placeholder="Enter your email" required>
-
-      <label for="password">Password:</label>
-      <input type="password" id="password" placeholder="Enter your password" required>
-
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-  </section>
+    <p class="link">Don’t have an account? <a href="register.html">Register</a></p>
+  </div>
 
+  <!-- Firebase Config & Script -->
+  <script type="module" src="login.js"></script>
 </body>
 </html>
