--- a/register.html
+++ b/register.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register - Free Tutoring</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .register-box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      width: 350px;
+      text-align: center;
+    }
+    h2 { color: #333; margin-bottom: 20px; }
+    input, select {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover { background: #0056b3; }
+    .link { margin-top: 15px; font-size: 14px; }
+    .link a { color: #007BFF; text-decoration: none; }
+  </style>
 </head>
 <body>
-
-  <header>
-    <h1>Free Tutoring</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="login.html">Login</a>
-      <a href="register.html" class="active">Register</a>
-    </nav>
-  </header>
-
-  <section class="form-section">
-    <h2>Create an Account</h2>
-    <form>
-      <label for="role">I am a:</label>
-      <select id="role" name="role">
+  <div class="register-box">
+    <h2>Create Account</h2>
+    <form id="registerForm">
+      <select id="role" required>
+        <option value="">Select Role</option>
         <option value="student">Student</option>
         <option value="tutor">Tutor</option>
       </select>
-
-      <label for="name">Full Name:</label>
-      <input type="text" id="name" placeholder="Enter your full name" required>
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" placeholder="Enter your email" required>
-
-      <label for="password">Password:</label>
-      <input type="password" id="password" placeholder="Create a password" required>
-
+      <input type="text" id="name" placeholder="Full Name" required />
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Register</button>
     </form>
-  </section>
+    <p class="link">Already have an account? <a href="login.html">Login</a></p>
+  </div>
 
+  <!-- Firebase Config & Script -->
+  <script type="module" src="register.js"></script>
 </body>
 </html>
