--- a/profile.html
+++ b/profile.html
@@ -4,90 +4,129 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Profile - Free Tutoring</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #f9f9f9;
       margin: 0;
       padding: 0;
     }
-    .profile-box {
-      max-width: 600px;
-      margin: 50px auto;
+    .profile-container {
+      display: flex;
+      max-width: 1000px;
+      margin: 30px auto;
+      gap: 20px;
+    }
+    .left-panel {
       background: white;
-      padding: 30px;
+      padding: 20px;
       border-radius: 10px;
-      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      flex: 1;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    h2 { color: #333; margin-bottom: 20px; }
-    label { display: block; margin-top: 10px; color: #555; }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
+    .left-panel img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
     }
-    button {
-      margin-top: 20px;
-      padding: 10px;
-      background: #007bff;
+    .upload-btn {
+      display: block;
+      margin: 10px auto;
+      background: #0077cc;
       color: white;
       border: none;
+      padding: 8px 15px;
       border-radius: 5px;
-      font-size: 16px;
       cursor: pointer;
     }
-    button:hover { background: #0056b3; }
-    .logout {
-      background: #dc3545;
+    .right-panel {
+      flex: 2;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    .logout:hover {
-      background: #a71d2a;
+    .tabs {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+    .tab {
+      cursor: pointer;
+      padding: 10px;
+      border-bottom: 2px solid transparent;
+    }
+    .tab.active {
+      border-bottom: 2px solid #0077cc;
+      font-weight: bold;
+    }
+    .tab-content {
+      display: none;
+    }
+    .tab-content.active {
+      display: block;
+    }
+    .logout-btn {
+      background: red;
+      color: white;
+      padding: 8px 15px;
+      border: none;
+      border-radius: 5px;
+      margin-top: 15px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="profile-box">
-    <h2>My Profile</h2>
-    <form id="profileForm">
-      <label>Name:</label>
-      <input type="text" id="name" placeholder="Your Name" required />
+  <div class="profile-container">
+    <!-- Left Profile Panel -->
+    <div class="left-panel">
+      <img id="profilePic" src="default-avatar.png" alt="Profile Picture">
+      <input type="file" id="uploadPhoto" accept="image/*" />
+      <button class="upload-btn" onclick="uploadProfilePic()">Upload Photo</button>
+      <h2 id="userName">Student Name</h2>
+      <p id="userRole">Student</p>
+      <p id="userEmail">example@email.com</p>
+      <button class="logout-btn" onclick="logout()">Logout</button>
+    </div>
 
-      <label>Role (Student / Tutor):</label>
-      <input type="text" id="role" placeholder="Student or Tutor" required />
+    <!-- Right Panel with Tabs -->
+    <div class="right-panel">
+      <div class="tabs">
+        <div class="tab active" onclick="openTab('status')">My Status</div>
+        <div class="tab" onclick="openTab('requests')">Class Requests</div>
+        <div class="tab" onclick="openTab('messages')">Messages</div>
+      </div>
 
-      <label>Bio:</label>
-      <textarea id="bio" placeholder="Write something about yourself..."></textarea>
+      <div id="status" class="tab-content active">
+        <h3>Status</h3>
+        <p>Your profile is under review ✅</p>
+      </div>
 
-      <button type="submit">Save Profile</button>
-    </form>
+      <div id="requests" class="tab-content">
+        <h3>Class Requests</h3>
+        <p>No requests yet.</p>
+      </div>
 
-    <button class="logout" id="logoutBtn">Logout</button>
+      <div id="messages" class="tab-content">
+        <h3>Messages</h3>
+        <p>No messages yet.</p>
+      </div>
+    </div>
   </div>
 
-  <!-- Firebase Auth Redirect Check -->
-  <script type="module">
-    import { auth } from "./firebase.js";
-    import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-
-    onAuthStateChanged(auth, (user) => {
-      if (!user) {
-        // 🚫 No user → kick back to login
-        window.location.href = "login.html";
-      } else {
-        console.log("✅ Logged in user:", user.email);
-      }
-    });
-
-    // Logout button
-    document.getElementById("logoutBtn").addEventListener("click", async () => {
-      await signOut(auth);
-      window.location.href = "login.html";
-    });
-  </script>
-
-  <!-- Profile save logic -->
   <script type="module" src="profile.js"></script>
+  <script>
+    function openTab(tabId) {
+      document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+      document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
+      document.getElementById(tabId).classList.add('active');
+      event.target.classList.add('active');
+    }
+  </script>
 </body>
 </html>
