--- a/profile.html
+++ b/profile.html
@@ -1,68 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Profile - Free Tutoring</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f7f9fc;
       margin: 0;
       padding: 0;
     }
-    .profile-container {
+
+    header {
+      background: #007bff;
+      color: white;
+      padding: 15px 30px;
       display: flex;
-      max-width: 1000px;
-      margin: 30px auto;
-      gap: 20px;
+      justify-content: space-between;
+      align-items: center;
     }
-    .left-panel {
+    header h1 {
+      margin: 0;
+      font-size: 22px;
+    }
+    header nav a {
+      color: white;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .container {
+      display: flex;
+      gap: 20px;
+      margin: 30px;
+    }
+
+    /* Left Profile Card */
+    .profile-card {
       background: white;
       padding: 20px;
-      border-radius: 10px;
-      flex: 1;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      width: 300px;
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    .left-panel img {
+    .profile-card img {
       width: 120px;
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 10px;
     }
-    .upload-btn {
+    .profile-card h2 {
+      margin: 10px 0 5px;
+      font-size: 20px;
+    }
+    .profile-card p {
+      margin: 5px 0;
+      color: #555;
+    }
+    .upload-section {
+      margin: 10px 0;
+    }
+    .upload-section input {
       display: block;
       margin: 10px auto;
-      background: #0077cc;
+    }
+    .upload-section button {
+      background: #007bff;
       color: white;
       border: none;
-      padding: 8px 15px;
-      border-radius: 5px;
+      padding: 8px 14px;
+      border-radius: 6px;
       cursor: pointer;
     }
-    .right-panel {
-      flex: 2;
+    .upload-section button:hover {
+      background: #0056b3;
+    }
+    .logout-btn {
+      background: #dc3545;
+      color: white;
+      border: none;
+      padding: 8px 14px;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+
+    /* Right Dashboard Tabs */
+    .dashboard {
+      flex-grow: 1;
       background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
     .tabs {
       display: flex;
-      gap: 20px;
-      margin-bottom: 20px;
+      border-bottom: 2px solid #eee;
+      margin-bottom: 15px;
     }
     .tab {
+      padding: 10px 20px;
       cursor: pointer;
-      padding: 10px;
-      border-bottom: 2px solid transparent;
+      font-weight: bold;
+      color: #555;
     }
     .tab.active {
-      border-bottom: 2px solid #0077cc;
-      font-weight: bold;
+      border-bottom: 3px solid #007bff;
+      color: #007bff;
     }
     .tab-content {
       display: none;
@@ -70,36 +118,37 @@
     .tab-content.active {
       display: block;
     }
-    .logout-btn {
-      background: red;
-      color: white;
-      padding: 8px 15px;
-      border: none;
-      border-radius: 5px;
-      margin-top: 15px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
-  <div class="profile-container">
-    <!-- Left Profile Panel -->
-    <div class="left-panel">
-      <img id="profilePic" src="default-avatar.png" alt="Profile Picture">
-      <input type="file" id="uploadPhoto" accept="image/*" />
-      <button class="upload-btn" onclick="uploadProfilePic()">Upload Photo</button>
-      <h2 id="userName">Student Name</h2>
-      <p id="userRole">Student</p>
-      <p id="userEmail">example@email.com</p>
-      <button class="logout-btn" onclick="logout()">Logout</button>
+  <header>
+    <h1>Free Tutoring</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="profile.html">My Profile</a>
+      <a href="#" id="logoutBtn">Logout</a>
+    </nav>
+  </header>
+
+  <div class="container">
+    <!-- Left Profile Card -->
+    <div class="profile-card">
+      <img id="profilePic" src="https://via.placeholder.com/120" alt="Profile Picture">
+      <div class="upload-section">
+        <input type="file" id="photoInput" accept="image/*">
+        <button id="uploadBtn">Upload Photo</button>
+      </div>
+      <h2 id="name">Loading...</h2>
+      <p id="role">student</p>
+      <p id="email">email@example.com</p>
     </div>
 
-    <!-- Right Panel with Tabs -->
-    <div class="right-panel">
+    <!-- Right Dashboard -->
+    <div class="dashboard">
       <div class="tabs">
-        <div class="tab active" onclick="openTab('status')">My Status</div>
-        <div class="tab" onclick="openTab('requests')">Class Requests</div>
-        <div class="tab" onclick="openTab('messages')">Messages</div>
+        <div class="tab active" data-tab="status">My Status</div>
+        <div class="tab" data-tab="requests">Class Requests</div>
+        <div class="tab" data-tab="messages">Messages</div>
       </div>
 
       <div id="status" class="tab-content active">
@@ -114,19 +163,28 @@
 
       <div id="messages" class="tab-content">
         <h3>Messages</h3>
-        <p>No messages yet.</p>
+        <p>No new messages.</p>
       </div>
     </div>
   </div>
 
+  <!-- Firebase Profile Script -->
   <script type="module" src="profile.js"></script>
+
   <script>
-    function openTab(tabId) {
-      document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-      document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
-      document.getElementById(tabId).classList.add('active');
-      event.target.classList.add('active');
-    }
+    // Tab switch logic
+    const tabs = document.querySelectorAll(".tab");
+    const contents = document.querySelectorAll(".tab-content");
+
+    tabs.forEach(tab => {
+      tab.addEventListener("click", () => {
+        tabs.forEach(t => t.classList.remove("active"));
+        contents.forEach(c => c.classList.remove("active"));
+
+        tab.classList.add("active");
+        document.getElementById(tab.dataset.tab).classList.add("active");
+      });
+    });
   </script>
 </body>
 </html>
