--- a/profile.html
+++ b/profile.html
@@ -6,12 +6,10 @@
   <title>My Profile - Free Tutoring</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f7f9fc;
+      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
+      background: #f5f6fa;
     }
-
     header {
       background: #007bff;
       color: white;
@@ -20,103 +18,75 @@
       justify-content: space-between;
       align-items: center;
     }
-    header h1 {
-      margin: 0;
-      font-size: 22px;
-    }
-    header nav a {
+    header h1 { margin: 0; font-size: 22px; }
+    nav a {
       color: white;
       margin-left: 20px;
       text-decoration: none;
       font-weight: bold;
     }
-
     .container {
       display: flex;
       gap: 20px;
-      margin: 30px;
+      padding: 30px;
     }
-
-    /* Left Profile Card */
-    .profile-card {
+    .sidebar, .main {
       background: white;
       padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      width: 300px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .sidebar {
+      width: 280px;
       text-align: center;
     }
-    .profile-card img {
+    .sidebar img {
       width: 120px;
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 10px;
+      border: 3px solid #007bff;
     }
-    .profile-card h2 {
-      margin: 10px 0 5px;
-      font-size: 20px;
-    }
-    .profile-card p {
-      margin: 5px 0;
-      color: #555;
-    }
-    .upload-section {
-      margin: 10px 0;
-    }
-    .upload-section input {
-      display: block;
-      margin: 10px auto;
-    }
-    .upload-section button {
-      background: #007bff;
+    .sidebar h2 { margin: 15px 0 5px; }
+    .sidebar p { margin: 5px 0; color: #555; }
+    .sidebar button {
+      background: red;
       color: white;
       border: none;
-      padding: 8px 14px;
-      border-radius: 6px;
+      padding: 10px 15px;
+      border-radius: 5px;
+      margin-top: 10px;
       cursor: pointer;
     }
-    .upload-section button:hover {
-      background: #0056b3;
-    }
-    .logout-btn {
-      background: #dc3545;
-      color: white;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-
-    /* Right Dashboard Tabs */
-    .dashboard {
-      flex-grow: 1;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      padding: 20px;
+    .main {
+      flex: 1;
     }
     .tabs {
       display: flex;
       border-bottom: 2px solid #eee;
       margin-bottom: 15px;
     }
-    .tab {
+    .tabs div {
       padding: 10px 20px;
       cursor: pointer;
       font-weight: bold;
-      color: #555;
     }
-    .tab.active {
+    .tabs div.active {
       border-bottom: 3px solid #007bff;
       color: #007bff;
     }
-    .tab-content {
-      display: none;
+    .tab-content { display: none; }
+    .tab-content.active { display: block; }
+    input[type="file"] {
+      margin: 10px 0;
     }
-    .tab-content.active {
-      display: block;
+    button.upload {
+      background: #007bff;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 5px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -131,20 +101,19 @@
   </header>
 
   <div class="container">
-    <!-- Left Profile Card -->
-    <div class="profile-card">
+    <!-- Sidebar -->
+    <div class="sidebar">
       <img id="profilePic" src="https://via.placeholder.com/120" alt="Profile Picture">
-      <div class="upload-section">
-        <input type="file" id="photoInput" accept="image/*">
-        <button id="uploadBtn">Upload Photo</button>
-      </div>
-      <h2 id="name">Loading...</h2>
-      <p id="role">student</p>
-      <p id="email">email@example.com</p>
+      <input type="file" id="fileInput">
+      <button class="upload" id="uploadBtn">Upload Photo</button>
+      <h2 id="profileName">Loading...</h2>
+      <p id="profileRole">role</p>
+      <p id="profileEmail">email@example.com</p>
+      <button id="logoutBtn2">Logout</button>
     </div>
 
-    <!-- Right Dashboard -->
-    <div class="dashboard">
+    <!-- Main -->
+    <div class="main">
       <div class="tabs">
         <div class="tab active" data-tab="status">My Status</div>
         <div class="tab" data-tab="requests">Class Requests</div>
@@ -155,36 +124,17 @@
         <h3>Status</h3>
         <p>Your profile is under review ✅</p>
       </div>
-
       <div id="requests" class="tab-content">
         <h3>Class Requests</h3>
         <p>No requests yet.</p>
       </div>
-
       <div id="messages" class="tab-content">
         <h3>Messages</h3>
-        <p>No new messages.</p>
+        <p>No messages yet.</p>
       </div>
     </div>
   </div>
 
-  <!-- Firebase Profile Script -->
   <script type="module" src="profile.js"></script>
-
-  <script>
-    // Tab switch logic
-    const tabs = document.querySelectorAll(".tab");
-    const contents = document.querySelectorAll(".tab-content");
-
-    tabs.forEach(tab => {
-      tab.addEventListener("click", () => {
-        tabs.forEach(t => t.classList.remove("active"));
-        contents.forEach(c => c.classList.remove("active"));
-
-        tab.classList.add("active");
-        document.getElementById(tab.dataset.tab).classList.add("active");
-      });
-    });
-  </script>
 </body>
 </html>
