--- a/login.html
+++ b/login.html
@@ -2,61 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - Free Tutoring</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #f5f5f5;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
     }
-    .login-box {
-      background: white;
+
+    .login-container {
+      background: #fff;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       width: 350px;
       text-align: center;
     }
-    h2 { color: #333; margin-bottom: 20px; }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ddd;
-      border-radius: 5px;
+
+    .login-container h2 {
+      margin-bottom: 20px;
+      color: #333;
     }
-    button {
+
+    .login-container input {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    .login-container button {
+      width: 100%;
+      padding: 12px;
       background: #28a745;
       color: white;
-      border: none;
-      border-radius: 5px;
       font-size: 16px;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
     }
-    button:hover { background: #1e7e34; }
-    .link { margin-top: 15px; font-size: 14px; }
-    .link a { color: #28a745; text-decoration: none; }
+
+    .login-container button:hover {
+      background: #218838;
+    }
+
+    .register-link {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+
+    .register-link a {
+      color: #28a745;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <div class="login-box">
+  <div class="login-container">
     <h2>Login</h2>
     <form id="loginForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-    <p class="link">Don’t have an account? <a href="register.html">Register</a></p>
+    <p class="register-link">
+      Don’t have an account? <a href="register.html">Register</a>
+    </p>
   </div>
 
-  <!-- Firebase Config & Script -->
+  <!-- Firebase + your login.js -->
   <script type="module" src="login.js"></script>
 </body>
 </html>
